# near-private-execution

./: .gitignore  README.md
contracts/shade-callback-demo/: Cargo.toml
contracts/shade-callback-demo/src/: lib.rs
contracts/shade-gateway/: Cargo.toml
contracts/shade-gateway/src/: lib.rs
contracts/shade-verifier/: Cargo.toml
contracts/shade-verifier/src/: lib.rs
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEVPOST.md
scripts/: clean.sh  demo.testnet.sh  deploy.testnet.sh
sdk/: package.json  tsconfig.json
sdk/src/: index.ts
worker/: .env.example  package-lock.json  package.json  tsconfig.json
worker/src/: index.ts
