cat > contracts/shade-verifier/Cargo.toml <<'TOML'
[package]
name = "shade-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.5.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
TOML
